--- a/style-file/style.css
+++ b/style-file/style.css
@@ -992,6 +992,112 @@ nav img {
   text-align: center;
   color: #252b42;
 }
+.Product-details > .second-container {
+  margin: 5vh auto;
+}
+.Product-details > .second-container > .d-flex {
+  justify-content: center;
+  align-items: center;
+  gap: 2vw;
+  margin: 2vh auto;
+}
+.Product-details > .second-container > .d-flex h4 {
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.20000000298023224px;
+  text-align: center;
+}
+
+.Product-details > .second-container > .d-flex h4 a {
+  color: #737373;
+}
+.Product-details > .second-container > .d-flex h4 a span {
+  color: #23856d;
+}
+.Product-details > .second-container > .row > .col-lg-4 > img {
+  width: 100%;
+}
+
+.Product-details > .second-container > .row > .col-lg-4 {
+  align-items: center;
+}
+.Product-details > .second-container > .row > .col-lg-4 h3 {
+  font-family: Montserrat;
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 32px;
+  letter-spacing: 0.10000000149011612px;
+  text-align: left;
+  margin: 2vh 0vw;
+}
+
+.Product-details > .second-container > .row > .col-lg-4 p {
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 400;
+
+  color: #737373;
+  margin: 1vh 0vw;
+}
+.Product-details > .second-container > .row > .col-lg-4 p i {
+  margin: 0vh 1vw;
+}
+
+.Product-details > .third-container {
+  margin: 5vh auto;
+}
+
+.Product-details > .third-container > h3 {
+  font-family: Montserrat;
+  font-size: 30px;
+  font-weight: 700;
+}
+.Product-details > .third-container > .row {
+  margin: 3vh auto;
+}
+.Product-details > .third-container > .row > .col-lg-2 {
+  display: flex;
+  flex-direction: column;
+}
+.Product-details > .third-container > .row > .col-lg-2 > img {
+  width: 100%;
+}
+.Product-details > .third-container > .row > .col-lg-2 > h5 {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 700;
+  color: #febb2a;
+  margin: 2vh 0vw;
+  text-align: center;
+}
+.Product-details > .third-container > .row > .col-lg-2 {
+  margin: 1vh auto;
+}
+.Product-details > .third-container > .row > .col-lg-2 > a {
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0;
+  text-align: center;
+  color: #737373;
+}
+.Product-details > .third-container > .row > .col-lg-2 > h6 {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 700;
+  margin: 1vh auto;
+  text-align: center;
+  color: #bdbdbd;
+}
+.Product-details > .third-container > .row > .col-lg-2 > h6 span {
+  color: #feba2b;
+  margin: 0vh 1vw;
+}
+.Product-details >.container-fluid>img{
+  width: 100%;
+}
 
 /* -----------------------------Footer ----------------------------- */
 
