--- a/style-file/tab.css
+++ b/style-file/tab.css
@@ -449,4 +449,277 @@
       color: #feba2a;
       font-weight: 700;
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+/* -----------------------------Product-details----------------------------- */
+.Product-details > .first-container > .d-flex {
+    align-items: center;
+    gap: 1vw;
+    margin: 3vh 0vw;
+  }
+  .Product-details > .first-container > .d-flex a {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0.20000000298023224px;
+    text-align: center;
+    color: #252b42;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 .main-img img{
+    width: 90%;
+    margin:1vh auto;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 img{
+    height: 100%;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > #reviews {
+    margin: 2vh 0vw;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > h3 {
+    font-family: Poppins;
+    font-size: 25px;
+    font-weight: 600;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > #reviews i {
+    color: #f3cd03;
+    font-size: 18px;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > #reviews > h6 {
+    margin: 0vh 1vw;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 700;
+    color: #737373;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > h1{
+  
+  font-family: Montserrat;
+  font-size: 30px;
+  font-weight: 700;
+  
+  margin: 3vh 0vw;
+  
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > h6{
+  
+  font-family: Montserrat;
+  font-size: 17px;
+  font-weight: 800;
+  color: #737373;
+  gap: 1vw;
+  margin: 2vh 0vw;
+  
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > h6 span{
+    color: #f3cd03;
+  
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > p{
+  
+  font-family: Montserrat;
+  font-size: 17px;
+  font-weight: 500;
+  color: #858585;
+  
+  
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > .item-color{
+    display: flex;
+    justify-content: space-around;
+    width: 150px;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > .item-color span{
+  padding: 1vh 0.5vw; 
+  border-radius: 50%;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > .buy-now{
+    margin: 3vh 0vw;
+    justify-content: space-between;
+    width: 280px;
+    align-items: center;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > .buy-now>.d-flex{
+  
+    gap: 1vw;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > .buy-now>.d-flex>span{
+    border: 1px solid #E8E8E8;
+    border-radius: 50%;
+    padding: 0.7vh 0.5vw;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > .buy-now>.d-flex>span a{
+    color: #000;
+  }
+  .Product-details > .first-container > .row > .col-lg-6 > .buy-now>button{
+    border: none;
+    background: #FEBA2B;
+    padding: 1vh 1vw;
+    color: white;
+    font-weight: 700;
+    border-radius: 5px;
+  }
+  .Product-details > .second-container {
+    margin: 5vh auto;
+  }
+  .Product-details > .second-container > .d-flex {
+    justify-content: center;
+    align-items: center;
+    gap: 2vw;
+    margin: 2vh auto;
+  }
+  .Product-details > .second-container > .d-flex h4 {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 700;
+  }
+  
+  .Product-details > .second-container > .d-flex h4 a {
+    color: #737373;
+  }
+  .Product-details > .second-container > .d-flex h4 a span {
+    color: #23856d;
+  }
+  .Product-details > .second-container > .row > .col-lg-4 > img {
+    width: 100%;
+  }
+  
+  .Product-details > .second-container > .row > .col-lg-4 {
+    align-items: center;
+  }
+  .Product-details > .second-container > .row > .col-lg-4 h3 {
+    font-family: Montserrat;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: 0.10000000149011612px;
+    text-align: left;
+    margin: 2vh 0vw;
+  }
+  
+  .Product-details > .second-container > .row > .col-lg-4 p {
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 400;
+  
+    color: #737373;
+    margin: 1vh 0vw;
+  }
+  .Product-details > .second-container > .row > .col-lg-4 p i {
+    margin: 0vh 1vw;
+  }
+  
+  .Product-details > .third-container {
+    margin: 5vh auto;
+  }
+  
+  .Product-details > .third-container > h3 {
+    font-family: Montserrat;
+    font-size: 30px;
+    font-weight: 700;
+  }
+  .Product-details > .third-container > .row {
+    margin: 3vh auto;
+  }
+  .Product-details > .third-container > .row > .col-lg-2 {
+    display: flex;
+    flex-direction: column;
+  }
+  .Product-details > .third-container > .row > .col-lg-2 > img {
+    width: 100%;
+  }
+  .Product-details > .third-container > .row > .col-lg-2 > h5 {
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 700;
+    color: #febb2a;
+    margin: 2vh 0vw;
+    text-align: center;
+  }
+  .Product-details > .third-container > .row > .col-lg-2 {
+    margin: 1vh auto;
+  }
+  .Product-details > .third-container > .row > .col-lg-2 > a {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 700;
+    margin: 0;
+    text-align: center;
+    color: #737373;
+  }
+  .Product-details > .third-container > .row > .col-lg-2 > h6 {
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 700;
+    margin: 1vh auto;
+    text-align: center;
+    color: #bdbdbd;
+  }
+  .Product-details > .third-container > .row > .col-lg-2 > h6 span {
+    color: #feba2b;
+    margin: 0vh 1vw;
+  }
+  .Product-details > .container-fluid > img {
+    width: 100%;
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
