put slider in porduct detail page

--- a/style-file/mobile.css
+++ b/style-file/mobile.css
@@ -72,17 +72,18 @@
 
     .Home > .second-container .row .col-lg-12 {
         padding: 0;
-        height: 230px;
+        height: 180px;
     }
 
     .Home > .second-container .row .position-relative .position-absolute {
         bottom: 0;
         left: 0;
-        padding: 3vh 4vw;
-        border-radius: 0px 20px 0px 0px;
+        padding: 1vh 4vw 3vh 4vw ;
+        border-radius: 0px 0px 0px 0px;
         background: #fdba2ca6;
         display: block;
         transition: opacity 0.2s, transform 0.2s;
+        height: 100%;
     }
     .Home > .second-container .row .position-relative:hover .position-absolute {
         display: block;
@@ -90,9 +91,15 @@
         transition: opacity 0.2s, transform 0.2s;
     }
 
-    .Home > .second-container .row .position-relative .position-absolute a {
-        padding: 1vh 4vw;
-    }
+    
+.Home > .second-container .row .position-relative .position-absolute a {
+    color: #000;
+    font-weight: 700;
+    border: 2px solid #000;
+    padding: 1vh 3vw;
+    border-radius: 8px;
+    font-size: 13px !important;
+  }
 
     .Home > .third-container > h2 {
         font-size: 22px;
@@ -798,6 +805,16 @@
         gap: 3vw;
     }
 
+    .Product-details > .first-container > .row > .col-lg-6 .main-img>img{
+        width: 100%;
+        margin:1vh auto;
+        height: 300px;
+      }
+      .Product-details > .first-container > .row > .col-lg-6 .thumbnails img {
+      transition: 0.5s;
+      height: 80px !important;
+      width: 90px;
+      }
     .Product-details > .first-container > .row > .col-lg-6 > p {
         font-size: 13px;
     }
