--- a/style-file/style.css
+++ b/style-file/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 :root {
   --container-shadow: 0px 0px 20px 0px #00000021;
 }
@@ -165,7 +166,7 @@ nav img {
 }
 .Home > .second-container .row .col-lg-12 {
   padding: 0;
-  height: 270px;
+  height: 250px;
 }
 .Home > .second-container .row .position-relative {
   border-radius: 20px;
@@ -174,7 +175,7 @@ nav img {
 .Home > .second-container .row .position-relative .position-absolute {
   bottom: 0;
   left: 0;
-  padding: 3vh 4vw;
+  padding: 2vh 4vw;
   border-radius: 0px 20px 0px 0px;
   background: #fdba2ca6;
   display: none;
@@ -992,9 +993,15 @@ nav img {
   text-align: center;
   color: #252b42;
 }
-.Product-details > .first-container > .row > .col-lg-6 .main-img img{
-  width: 90%;
+.Product-details > .first-container > .row > .col-lg-6 .main-img>img{
+  width: 100%;
   margin:1vh auto;
+  height: 400px;
+}
+.Product-details > .first-container > .row > .col-lg-6 .thumbnails img {
+transition: 0.5s;
+height: 80px !important;
+width: 100px;
 }
 .Product-details > .first-container > .row > .col-lg-6 img{
 height: 100%;
@@ -1187,6 +1194,16 @@ border-radius: 50%;
 }
 .Product-details > .container-fluid > img {
   width: 100%;
+}
+
+
+
+.thumbnail {
+  cursor: pointer; 
+  transition: transform 0.2s; 
+}
+.thumbnail:hover {
+  transform: scale(1.1); /* Scale effect on hover */
 }
 
 /* -----------------------------Footer ----------------------------- */
