--- a/style-file/mobile.css
+++ b/style-file/mobile.css
@@ -66,9 +66,17 @@
         justify-content: end;
         padding: 0;
     }
-    .Home > .first-container .img > img {
-        width: 60%;
-    }
+  
+.Home > .first-container .img  .slider {
+    position: relative;
+    width: 400%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    animation: 30s cubic-bezier(1, 0.95, 0.565, 1) sliding infinite;
+  }
 
     .Home > .second-container .row .col-lg-12 {
         padding: 0;
