--- a/style-file/style.css
+++ b/style-file/style.css
@@ -79,7 +79,7 @@ nav img {
 }
 /* -----------------------------Home ----------------------------- */
 .Home > .first-container {
-  background-image: linear-gradient(to right, #feba2a 86%, #fff 12%);
+  background-image: linear-gradient(to right, #feba2a 85%, #fff 15%);
   border-radius: 30px;
 
   width: 85%;
@@ -127,10 +127,75 @@ nav img {
 .Home > .first-container .img {
   justify-content: end;
   padding: 0;
+  align-items: center;
+  overflow: hidden;
+  z-index: 0;
 }
-.Home > .first-container .img > img {
+
+
+.Home > .first-container .img  .slider {
+  position: relative;
+  width: 400%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  animation: 30s cubic-bezier(1, 0.95, 0.565, 1) sliding infinite;
+}
+
+
+.Home > .first-container .img .slide {
+  position: relative;
+  min-width: 100%;
+  height: 100%;
+  
+}
+
+
+
+.Home > .first-container .img  .slide img {
   width: 100%;
+  height: 100%;
 }
+
+
+
+@keyframes sliding {
+  0% {
+    transform: translateX(0%);
+  }
+  20% {
+    transform: translateX(0%);
+  }
+  25% {
+    transform: translateX(-100%);
+  }
+  45% {
+    transform: translateX(-100%);
+  }
+  50% {
+    transform: translateX(-200%);
+  }
+  70% {
+    transform: translateX(-200%);
+  }
+  75% {
+    transform: translateX(-300%);
+  }
+  95% {
+    transform: translateX(-300%);
+  }
+  100% {
+    transform: translateX(-400%);
+  }
+}
+
+
+
+
+
+
 
 .Home > .second-container {
   margin: 4vh auto;
