--- a/style-file/tab.css
+++ b/style-file/tab.css
@@ -28,7 +28,7 @@
 
     /* -----------------------------Home ----------------------------- */
     .Home > .first-container {
-        background-image: linear-gradient(to right, #feba2a 92%, #fff 8%);
+        background-image: linear-gradient(to right, #feba2a 90%, #fff 10%);
         border-radius: 40px;
 
         width: 95%;
@@ -69,9 +69,17 @@
         justify-content: end;
         padding: 0;
     }
-    .Home > .first-container .img > img {
-        width: 50%;
-    }
+   
+.Home > .first-container .img  .slider {
+    position: relative;
+    width: 400%;
+    height: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    animation: 30s cubic-bezier(1, 0.95, 0.565, 1) sliding infinite;
+  }
     /* ----------------------------- Shop ----------------------------- */
 
     .Shop > .first-container > .row > .col-lg-2 img {
